# facecheck-py-microservice

./: .env  .env.example  README.md  pyproject.toml
src/: api.py  config.py  main.py
src/face/: embedding.py  models.py
src/qdrant/: client.py
src/utils/: image_loader.py
